# gtsam-project-python

./: .gitignore  CMakeLists.txt  Example.ipynb  LICENSE  README.md  TUTORIAL.md  gtsam_example.h  gtsam_example.i  gtsam_example.tpl  module.py
cpp/: greeting.cpp  greeting.h
cpp/sub_dir/: curse.cpp  curse.h  sub_dir.i
example/: CMakeLists.txt  README.md  example.h  gtsam_example.h  module.py  setup.py
example/python/: CMakeLists.txt
example/python/gtsam_example_py/examples/: DogLegOptimizerExample.py
example/python/gtsam_example_py/tests/: test_Example.py
example/src/: greeting.cpp  greeting.h
example/wrap/: pybind_wrapper.tpl
gtsam_example/src/: greeting.h
python/: .gitignore  CMakeLists.txt  __init__.py.in  main.py  preamble.h  pybind_wrapper.tpl.example  requirements.txt  setup.py.in  specializations.h
python/gtsam_example/: gtsam_example.tpl
python/gtsam_example_py/: __init__.py
python/tests/: test_example.py
wrap/: pybind_wrapper.tpl.example
wrapper/: __init__.py.in  pybind_wrapper.tpl.example
wrapper/preamble/: gtsam_example.h
wrapper/specializations/: gtsam_example.h
